2011-06-29  Jim Huang  <jserv@0xlab.org>

	* src/pcmanx_gtk2.cpp (main): Set program name to make gnome-shell
	happy, which seems to obtain the name from argv[0] instead of Gtk+
	properties.
	Close issue #41

2011-06-29  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* NEWS: fontconfig fallback font support.

2011-06-28  Jim Huang  <jserv@0xlab.org>

	* NEWS,
	README: Mozilla/Firefox Plugin support was removed, and the
	documentation should be reflected as well.

2011-06-28  Jim Huang  <jserv@0xlab.org>

	* src/core/uao250.c,
	src/core/uao250.h,
	src/core/uao241.c,
	src/core/uao241.h,
	src/core/uao.c,
	src/core/uao.h: Move to src/charset to simplify libpcmanx_core

	* src/charset: Implement UAO routines.

	* src/core/Makefile.am,
	src/Makefile.am,
	configure.ac: Ditto.

2011-06-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Use "3.0 (quilt)" as the package source format.

2011-06-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/Makefile.am,
	src/core/cfontconfig.cpp,
	src/core/cfontconfig.h,
	src/core/font.cpp,
	src/core/termview.cpp: Add fontconfig fallback font support.

2011-06-23  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/Makefile.am,
	src/core/termview.cpp,
	src/core/uao.c,
	src/core/uao.h,
	src/core/uao241.c,
	src/core/uao241.h,
	src/core/uao250.c,
	src/core/uao250.h: Polish UAO utilities.

2011-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/site.cpp: Set GB2312 as default encoding for zh_CN users.
	* build/snapshot-deb.sh: Fix syntax error for version number.
	* src/core/termview.cpp,
	src/mainframe.cpp: Restrict UAO to only work for BIG5 encoding.

2011-06-12  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/sitepage.h: Add UAO user interface.
	* src/appconfig.cpp,
	src/appconfig.h,
	src/core/site.cpp,
	src/core/site.h,
	src/core/termview.cpp,
	src/core/termview.h,
	src/mainframe.cpp,
	src/sitepage.cpp,